# knowledge-base

./: README.md  issues.md
.github/ISSUE_TEMPLATE/: jkk.md
finance/: 20260720_minits.md
general-affairs/: 旅費規定.pages
projects/miraincome/domain_model/: enterprises.md  ubiquitus_lang.md  user_story.md
projects/miraincome/mtg/: 20260706_weekly.md
sales/: questions.md
study/raw/: business_planning.md  knowledge_management.md  seci_process.md
tools/md2pdf/: Cargo.toml
tools/md2pdf/src/: cli.rs  error.rs  font.rs  layout.rs  main.rs  markdown.rs  pdf_render.rs  signer.rs
